bk_ida/gccida/c2/concat_loc_descriptor
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8385:4: error: expected ';' after expression
rtx v9; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8385:5: error: use of undeclared identifier 'v9'
rtx v9; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8443:53: error: expected expression
v5 = concat_loc_descriptor( x0->fld[0].rtx, *( rtx *)&x0[1]); 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8446:44: error: use of undeclared identifier 'machine_mode'
v5 = mem_loc_descriptor( x0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x0)); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8446:59: error: expected expression
v5 = mem_loc_descriptor( x0->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x0)); 
                                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8450:1: error: use of undeclared identifier 'v9'
v9 = x1; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8456:1: error: use of undeclared identifier 'v9'
v9 = x1->fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8458:7: error: use of undeclared identifier 'v9'
v10 = v9->fld[0].rtuint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8527:54: error: expected expression
v12 = concat_loc_descriptor( x1->fld[0].rtx, *( rtx *)&x1[1]); 
                                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8530:45: error: use of undeclared identifier 'machine_mode'
v12 = mem_loc_descriptor( x1->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x1)); 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/dwarf2out.c:8530:60: error: expected expression
v12 = mem_loc_descriptor( x1->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x1)); 
                                                           ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/concat_loc_descriptor/src/obj/dwarf2out.o] Error 1
